--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   supabase_flutter: ^2.9.1
   flutter_bloc: ^9.1.1
   flutter_dotenv: ^5.1.0
+  get_it: ^8.0.3
 
 dev_dependencies:
   flutter_test:
